Fixed table spacing in about

--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -55,7 +55,6 @@ hr
         list-style-type: none
         line-height: 1.5
         margin-bottom: 5px
-        margin-top: 20px
 
 table
     width: 100%
@@ -164,6 +163,7 @@ table
         max-height: 500px
         opacity: 1
         visibility: visible
+        margin-bottom: 20px
 
 p
     line-height: 1.7
