--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -37,9 +37,8 @@
             display: inline-block
 
     .title-image
-        width: 100%
-        max-width: 425px
-        max-height: 250px
+        max-width: 250px
+        max-height: auto
         display: block
         margin: 2rem auto
         padding: 0
